--- a/_config.yml
+++ b/_config.yml
@@ -117,7 +117,7 @@ index_with_subtitle: false
 menu:
   home: /
   #categories: /categories/
-  about: /about/
+  about: /about.md
   archives: /archives/
   tags: /tags/
   #sitemap: /sitemap.xml
